sensowne potwierdzenie usuniecia kontaktu
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@761 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
++++ wersja 0.3.3-rc3
+* sensowne potwierdzenie usuniêcia kontaktu (adrian)
+
 +++ wersja 0.3.3-rc2
 * sporo poprawek dla FreeBSD (adrian)
 * gdy mamy status domy¶lny "niedostêpny" to nie ginie nam zapamiêtany
