- próba nowego "porzadnego" autoaway'a.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@762 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 +++ wersja 0.3.3-rc3
 * sensowne potwierdzenie usuniêcia kontaktu (adrian)
+* próba nowego "porz±dnego" autoaway'a (chilek)
 
 +++ wersja 0.3.3-rc2
 * sporo poprawek dla FreeBSD (adrian)
