- autodetekcja adresu IP dla DCC jest robiona przy kazdym polaczeniu o ile nie wpiszemy adresu IP jawnie.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@766 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 +++ wersja 0.3.3-rc3
 * sensowne potwierdzenie usuniêcia kontaktu (adrian)
 * próba nowego "porz±dnego" autoaway'a (chilek)
+* autodetekcja adresu IP dla DCC jest robiona przy ka¿dym po³±czeniu o ile
+  nie wpiszemy adresu IP jawnie (chilek)
 
 +++ wersja 0.3.3-rc2
 * sporo poprawek dla FreeBSD (adrian)
