powiadomienie przez tray hinta
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@774 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,7 @@
 * pozbycie siê snprintf - zamiast tego jest QString::number (mast3r)
 * make clean kasuje pliki *_moc.cpp (adrian)
 * simlite uzywa inttypes.h jesli w systemie nie ma stdint.h (adrian)
+* powiadomienie o nowej wiadomosci w rozmowie przez tray hint'a
  
 +++ wersja 0.3.3-rc2
 * sporo poprawek dla FreeBSD (adrian)
