--- a/ChangeLog
+++ b/ChangeLog
@@ -11,7 +11,10 @@
 * make clean kasuje pliki *_moc.cpp (adrian)
 * simlite uzywa inttypes.h jesli w systemie nie ma stdint.h (adrian)
 * powiadomienie o nowej wiadomosci w rozmowie przez tray hint'a
- 
+* ikonka Kadu instaluje sie w menu KDE w grupie Internet (adrian)
+* configure: obs³uga --enable-doc=DIR z mo¿liwo¶ci± ustawienia
+  docelowego katalogu dla dokumentacji (adrian)
+
 +++ wersja 0.3.3-rc2
 * sporo poprawek dla FreeBSD (adrian)
 * gdy mamy status domy¶lny "niedostêpny" to nie ginie nam zapamiêtany
