- uzupelnienie i uporzadkowanie listy domyslnych serwerow GG.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@778 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,7 @@
 * ikonka Kadu instaluje sie w menu KDE w grupie Internet (adrian)
 * configure: obs³uga --enable-doc=DIR z mo¿liwo¶ci± ustawienia
   docelowego katalogu dla dokumentacji (adrian)
+* uzupe³nienie i uporz±dkowanie listy domy¶lnych serwerów GG (chilek)
 
 +++ wersja 0.3.3-rc2
 * sporo poprawek dla FreeBSD (adrian)
