jezeli nie mamy dokumentacji, otwiera z www
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@783 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,8 @@
 * configure: obs³uga --enable-doc=DIR z mo¿liwo¶ci± ustawienia
   docelowego katalogu dla dokumentacji (adrian)
 * uzupe³nienie i uporz±dkowanie listy domy¶lnych serwerów GG (chilek)
+* je¿eli nie mamy dokumentacji to jest ona otwierana
+  z http://www.kadu.net/index_doc.html (mast3r)
 
 +++ wersja 0.3.3-rc2
 * sporo poprawek dla FreeBSD (adrian)
