--- a/ChangeLog
+++ b/ChangeLog
@@ -19,6 +19,7 @@
   z http://www.kadu.net/index_doc.html (mast3r)
 * configure: prawid³owa obs³uga przekazywanych przez u¿ytkownika CXXFLAGS
   oraz domy¶lna kompilacja z -O2 (adrian)
+* przepisany od zera b³êdny kod wykrywania adresów url w wiadomo¶ciach (adrian)
 
 +++ wersja 0.3.3-rc2
 * sporo poprawek dla FreeBSD (adrian)
