--- a/ChangeLog
+++ b/ChangeLog
@@ -20,6 +20,7 @@
 * configure: prawid³owa obs³uga przekazywanych przez u¿ytkownika CXXFLAGS
   oraz domy¶lna kompilacja z -O2 (adrian)
 * przepisany od zera b³êdny kod wykrywania adresów url w wiadomo¶ciach (adrian)
+* pionowe zak³adki grup (chilek)
 
 +++ wersja 0.3.3-rc2
 * sporo poprawek dla FreeBSD (adrian)
