- zapomnialem dopisac siebie.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@795 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -22,7 +22,7 @@
 * przepisany od zera b³êdny kod wykrywania adresów url w wiadomo¶ciach (adrian)
 * pionowe zak³adki grup (chilek)
 * wy³±czenie ikony w tray'u nie powoduje wywalenia siê kadu, gdy jednocze¶nie
-  wy³±czamy dymki
+  wy³±czamy dymki (chilek)
 
 +++ wersja 0.3.3-rc2
 * sporo poprawek dla FreeBSD (adrian)
