--- a/ChangeLog
+++ b/ChangeLog
@@ -23,6 +23,7 @@
 * pionowe zak³adki grup (chilek)
 * wy³±czenie ikony w tray'u nie powoduje wywalenia siê kadu, gdy jednocze¶nie
   wy³±czamy dymki (chilek)
+* configure: kolejne poprawki dla FreeBSD (adrian)
 
 +++ wersja 0.3.3-rc2
 * sporo poprawek dla FreeBSD (adrian)
