- jesli usuniemy ostatniego uzytkownika z ostatniej grupy innej niz domyslna lista uzytkownikow przelacza sie na liste wszystkich uzytkownikow.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@798 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -24,6 +24,8 @@
 * wy³±czenie ikony w tray'u nie powoduje wywalenia siê kadu, gdy jednocze¶nie
   wy³±czamy dymki (chilek)
 * configure: kolejne poprawki dla FreeBSD (adrian)
+* je¶li usuniemy ostatniego u¿ytkownika z ostatniej grupy innej ni¿ domy¶lna
+  lista u¿ytkowników prze³±cza siê na listê wszystkich u¿ytkowników (chilek)
 
 +++ wersja 0.3.3-rc2
 * sporo poprawek dla FreeBSD (adrian)
