- okno konfiguracja -> zakladka powiadom: listy uzytkownikow posortowane, a ponadto nie wyswietlaja sie tam osoby, ktore nie maja numerow GG.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@806 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -26,6 +26,8 @@
 * configure: kolejne poprawki dla FreeBSD (adrian)
 * je¶li usuniemy ostatniego u¿ytkownika z ostatniej grupy innej ni¿ domy¶lna
   lista u¿ytkowników prze³±cza siê na listê wszystkich u¿ytkowników (chilek)
+* okno konfiguracja -> zak³adka powiadom: listy u¿ytkowników posortowane,
+  a ponadto nie wy¶wietlaj± siê tam osoby, które nie maj± numerów GG (chilek)
 
 +++ wersja 0.3.3-rc2
 * sporo poprawek dla FreeBSD (adrian)
