- sporo zmian (patrz ChangeLog).
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@809 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
++++ wersja 0.3.3-rc4
+* dodatkowe opcje dostêpne w menu podrêcznym u¿ytkownika (blokowanie, ignorowanie,
+  powiadamianie i niedostêpny przy tylko dla znajomych) (chilek)
+* ignored: QArray -> QValueList, FILE -> QFile (chilek)
+
 +++ wersja 0.3.3-rc3
 * sensowne potwierdzenie usuniêcia kontaktu (adrian)
 * próba nowego "porz±dnego" autoaway'a (chilek)
