- mozliwosc zmiany uinu uzytkownika.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@811 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 * dodatkowe opcje dostêpne w menu podrêcznym u¿ytkownika (blokowanie, ignorowanie,
   powiadamianie i niedostêpny przy tylko dla znajomych) (chilek)
 * ignored: QArray -> QValueList, FILE -> QFile (chilek)
+* userinfo: mo¿liwo¶æ zmiany uinu u¿ytkownika (chilek)
 
 +++ wersja 0.3.3-rc3
 * sensowne potwierdzenie usuniêcia kontaktu (adrian)
