- mozna uzytkownikowi usuwac i dodawac UIN, poza tym jesli np. usuniemy UIN to nie sa wysylane bezsensowne powiadomienia do serwera GG.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@813 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
   powiadamianie i niedostêpny przy tylko dla znajomych) (chilek)
 * ignored: QArray -> QValueList, FILE -> QFile (chilek)
 * userinfo: mo¿liwo¶æ zmiany uinu u¿ytkownika (chilek)
+* userinfo: mo¿na u¿ytkownikowi usuwaæ i dodawaæ UIN, poza tym je¶li np. usuniemy UIN
+  to nie s± wysy³ane bezsensowne powiadomienia do serwera GG (chilek)
 
 +++ wersja 0.3.3-rc3
 * sensowne potwierdzenie usuniêcia kontaktu (adrian)
