- dodanie guzikow przewijania zakladek grup.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@816 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,7 @@
   haczyków (chilek)
 * poprawiony mechanizm zmiany wielko¶ci komponentów w oknie chat. Teraz mo¿na
   ju¿ naprawdê dowolnie, co do pixela ustawiaæ wielko¶æ (adrian)
+* dodanie guzików przewijania zak³adek grup (chilek)
 
 +++ wersja 0.3.3-rc3
 * sensowne potwierdzenie usuniêcia kontaktu (adrian)
