--- a/ChangeLog
+++ b/ChangeLog
@@ -12,6 +12,8 @@
 * dodanie guzików przewijania zak³adek grup (chilek)
 * czcionka w zak³adkach grup to czcionka ustawiona w userboxie + bold,
   powinno to poprawiæ troszke wygl±d (mast3r)
+* pocz±tki porz±dnego debuga. Pliki debug.cpp/h. Makra kdebug i kdebugf.
+  Od teraz u¿ywamy zamiast fprintf(stderr,...) (adrian)
 
 +++ wersja 0.3.3-rc3
 * sensowne potwierdzenie usuniêcia kontaktu (adrian)
