--- a/ChangeLog
+++ b/ChangeLog
@@ -28,7 +28,7 @@
 * pozbycie siê snprintf - zamiast tego jest QString::number (mast3r)
 * make clean kasuje pliki *_moc.cpp (adrian)
 * simlite uzywa inttypes.h jesli w systemie nie ma stdint.h (adrian)
-* powiadomienie o nowej wiadomosci w rozmowie przez tray hint'a
+* powiadomienie o nowej wiadomosci w rozmowie przez tray hint'a (mast3r)
 * ikonka Kadu instaluje sie w menu KDE w grupie Internet (adrian)
 * configure: obs³uga --enable-doc=DIR z mo¿liwo¶ci± ustawienia
   docelowego katalogu dla dokumentacji (adrian)
