--- a/ChangeLog
+++ b/ChangeLog
@@ -12,9 +12,11 @@
 * dodanie guzików przewijania zak³adek grup (chilek)
 * czcionka w zak³adkach grup to czcionka ustawiona w userboxie + bold,
   powinno to poprawiæ troszke wygl±d (mast3r)
-* pocz±tki porz±dnego debuga. Pliki debug.cpp/h. Makra kdebug i kdebugf.
+* debug: pocz±tki porz±dnego debuga. Pliki debug.cpp/h. Makra kdebug i kdebugf.
   Od teraz u¿ywamy zamiast fprintf(stderr,...) (adrian)
-* ca³e kod kadu przerobiony na nowy sposób debugowania (adrian)
+* debug: ca³y kod kadu przerobiony na nowy sposób debugowania (adrian)
+* debug: kadu kompilowane tradycyjnie (bez --enable-debug) nie zawiera
+  komunikatów debuguj±cych, dziêki czemu jest mniejsze i szybsze (adrian)
 
 +++ wersja 0.3.3-rc3
 * sensowne potwierdzenie usuniêcia kontaktu (adrian)
