/usr/include/qt3
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@830 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -17,6 +17,7 @@
 * debug: ca³y kod kadu przerobiony na nowy sposób debugowania (adrian)
 * debug: kadu kompilowane tradycyjnie (bez --enable-debug) nie zawiera
   komunikatów debuguj±cych, dziêki czemu jest mniejsze i szybsze (adrian)
+* configure: poprawka wykrywania QT (adrian)
 
 +++ wersja 0.3.3-rc3
 * sensowne potwierdzenie usuniêcia kontaktu (adrian)
