--- a/ChangeLog
+++ b/ChangeLog
@@ -22,6 +22,7 @@
 * optymalizacja reszty kodu, w dialogu do opisu statusu jest liczba
   informuj±ca ile znaków mo¿na jeszcze wprowadziæ, a tak¿e max. d³ugo¶æ opisu jest
   brana ze sta³ej deklerowanej w libgadu.h (mast3r)
+* poprawne wyswietlanie pola "wyswietl" w informacji o kontakcie
 
 +++ wersja 0.3.3-rc3
 * sensowne potwierdzenie usuniêcia kontaktu (adrian)
