--- a/ChangeLog
+++ b/ChangeLog
@@ -24,6 +24,7 @@
   brana ze sta³ej deklerowanej w libgadu.h (mast3r)
 * poprawne wyswietlanie pola "wyswietl" w informacji o kontakcie (mast3r)
 * kontakty z ustawionym numerem telefonu maj± ikonki z telefonami (jz,adrian)
+* wydzielenie ikon ze statusami do odzielnych plików (chilek)
 
 +++ wersja 0.3.3-rc3
 * sensowne potwierdzenie usuniêcia kontaktu (adrian)
