- poprawki ChangeLoga zwiazana z wydaniem nowej wersji kadu.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@843 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
++++ wersja 0.3.3-final
+* ikonka wiadomo¶ci i ikon statusu "ukryty" z telefonikiem do oddzielnych plików (chilek)
+
 +++ wersja 0.3.3-rc4
 * dodatkowe opcje dostêpne w menu podrêcznym u¿ytkownika (blokowanie, ignorowanie,
   powiadamianie i niedostêpny przy tylko dla znajomych) (chilek)
@@ -25,7 +28,6 @@
 * poprawne wyswietlanie pola "wyswietl" w informacji o kontakcie (mast3r)
 * kontakty z ustawionym numerem telefonu maj± ikonki z telefonami (jz,adrian)
 * wydzielenie ikon ze statusami do oddzielnych plików (chilek)
-* ikonka wiadomo¶ci i ikon statusu "ukryty" z telefonikiem do oddzielnych plików (chilek)
 
 +++ wersja 0.3.3-rc3
 * sensowne potwierdzenie usuniêcia kontaktu (adrian)
